# File-Converter

./: .gitignore  FIXES_APPLIED.md  FIXES_SUMMARY.md  GUI_FIX.md  INSTALL.md  LICENSE  MIGRATION_TO_FLET.md  QUICKSTART.md  README.md  STATUS.md  TEST_INSTRUCTIONS.md  VERIFICATION.md  pyproject.toml  requirements.txt  test_conversion_integration.py
assets/icons/: .gitkeep
cli/: __init__.py  main.py
config/: defaults.toml  toolpaths.example.toml
docs/: PROGRESS.md  formats.md  plugin-spec.md  presets.md
scripts/: dev_setup.sh  run_cli.sh  run_gui.sh
src/file_converter/: __init__.py  app.py
src/file_converter/core/: __init__.py  detect.py  engine.py  exec.py  jobs.py  logs.py  planner.py  presets.py  registry.py
src/file_converter/plugins/: __init__.py
src/file_converter/plugins/ffmpeg_video/: plugin.py  plugin.toml
src/file_converter/ui/: __init__.py  app_shell.py  main_window.py
src/file_converter/ui/pages/: home.py  run_queue.py  settings.py
src/file_converter/ui/widgets/: file_drop.py  job_row.py  progress_chip.py
tests/: __init__.py  test_detect.py  test_ffmpeg_video.py
